--- a/todolist/src/main/resources/application.properties
+++ b/todolist/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-spring.application.name=todolist
+spring.datasource.url=jdbc:h2:mem:todolist
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
